--- a/AplicacionWebCodeFirsBiblioteca/appsettings.json
+++ b/AplicacionWebCodeFirsBiblioteca/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Server=localhost;Port=5432;Database=gestorBibliotecaPersonal;User Id=postgres;Password=aaronsenen001!;SearchPath=gbp_operacional"
+    "Connection": "Server=ip;Port=puerto;Database=bd;User Id=usu;Password=contra;SearchPath=esquema"
   }
 }
